--- a/scss/_single-work.scss
+++ b/scss/_single-work.scss
@@ -53,7 +53,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    height: calc(100vh - 100px);
+    height: calc(70vh - 100px);
+    margin-top: 5em;
 
     @media (max-width: 48rem){
         height: calc(60dvh - 100px);
