--- a/scss/style.css
+++ b/scss/style.css
@@ -241,12 +241,13 @@ header nav ul {
     border-radius: 25px;
     position: absolute;
     top: 50px;
-    right: -380px;
+    right: 0;
     z-index: 1;
     -webkit-box-shadow: 0 0 20px rgba(0, 0, 0, 0.16);
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.16);
     -webkit-transition: 350ms ease-in;
     transition: 350ms ease-in;
+    opacity: 0;
   }
   header nav ul.open {
     right: 0;
@@ -258,7 +259,8 @@ header nav ul {
 
 @media (max-width: 767px) {
   header nav ul.open {
-    right: 5%;
+    right: 0;
+    opacity: 1;
   }
 }
 
