--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -13,7 +13,7 @@ header {
     } 
 
     h1, h2 {
-        font-family: $font;
+        font-family: $font-extrabold;
         font-size: 30px;
         font-weight: 800;
 
