--- a/scss/_page.scss
+++ b/scss/_page.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 70vh;
+    // height: 70vh;
     margin: 50px auto 80px;
 
     @media (max-width: 1024px){
