--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -121,6 +121,7 @@ header {
 
                 &.open {
                     right: 0;
+                    opacity: 1;
                     li a:hover::after {
                         height: 0px;
                     }
@@ -129,7 +130,7 @@ header {
 
             @media (max-width: 767px){
                 &.open {
-                    right: 0;
+                    right: 5%;
                     opacity: 1;
                 }
             }
