--- a/scss/_single-work.scss
+++ b/scss/_single-work.scss
@@ -159,3 +159,10 @@ article {
         }
     }
 }
+
+.energie-besparen .header-work-under {
+    height: calc(100dvh - 100px);
+    @media (max-width: 48rem){
+        height: calc(100dvh - 100px);
+    }
+}
