--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -38,6 +38,10 @@ h2 {
     font-size: 40px;
     font-weight: 800;
 
+    @media (max-width: 768px){
+        font-size: 30px;
+    }
+
     @media (max-width: 479px){
         font-size: 25px;
     }
@@ -86,6 +90,12 @@ header, section {
 
     @media (max-width: 29.9375rem) {
         padding: 1.25rem 1em;
+    }
+}
+
+section {
+    @media (max-width: 29.9375rem) {
+        padding: 1.25rem 0;
     }
 }
 
