--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -106,3 +106,11 @@ a.button {
     text-decoration: none;
     color: $white;
 }
+
+.energie-besparen .header-work-under {
+    height: calc(100dvh - 100px);
+    margin-top: 2em;
+    @media (max-width: 48rem){
+        height: calc(100dvh - 100px);
+    }
+}
