--- a/scss/style.css
+++ b/scss/style.css
@@ -149,6 +149,20 @@ a.button {
   }
 }
 
+@media (max-width: 76.875rem) {
+  .city-trip .header-work-next {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .city-trip .header-work-next h1 {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+
 header {
   padding: 20px 0;
   display: -webkit-box;
